<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".orders.OrderFragment">

        <!-- TODO: Update blank fragment layout -->
        <include
            android:id="@+id/orderGeneralInfo"
            layout="@layout/item_order" />

        <TextView
            android:id="@+id/orderDescriptionNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/orderDescriptionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder_paragraph"
            android:textColor="?attr/colorOnBackground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/orderNotesB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/order_notes_button" />

        <Button
            android:id="@+id/orderProductsB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/order_products_button" />

        <Button
            android:id="@+id/orderSummaryB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/order_summary_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>