<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="?attr/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/materialsHeader"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:padding="4dp"
                android:text="@string/materials"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantityHeader"
                android:layout_width="@dimen/quantity_col_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/quantity"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/colorBackground"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/item_products_list" />

                <include layout="@layout/item_products_list" />

                <include layout="@layout/item_products_list" />

                <include layout="@layout/item_products_list" />

                <include layout="@layout/item_products_list" />

                <include layout="@layout/item_products_list" />

                <include layout="@layout/item_products_list" />

                <include layout="@layout/item_products_list" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/add_products_from_warehouse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>