<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".warehouse.WarehouseDetailsFragment"
    app:defaultNavHost="true"
    app:navGraph="@navigation/warehouse_nav_graph">

    <data>
        <variable
            name="product"
            type="com.example.msi_budowa.common.Product" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/productName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{product.name, default = @string/material_name_placeholder}"
                        android:textColor="?attr/colorOnBackground"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(product.price.value) + ` zł / ` + product.price.priceType.stringValue, default = @string/price_placeholder}"
                        android:textColor="?attr/colorOnBackground" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/imageButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="?attr/colorPrimary"
                            android:minHeight="48dp"
                            app:srcCompat="@android:drawable/arrow_down_float"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/productSubType"
                            android:layout_width="48dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/color"
                            android:textColor="?attr/colorOnBackground" />

                        <ImageButton
                            android:id="@+id/imageButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:backgroundTint="?attr/colorPrimary"
                            app:srcCompat="@android:drawable/arrow_up_float"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    tools:srcCompat="@tools:sample/avatars" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/orderDescriptionNameTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="?attr/colorOnBackground"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{product.description, default = @string/text_placeholder_paragraph}"
                        android:textColor="?attr/colorOnBackground" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/decreaseAmountBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/colorPrimary"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:srcCompat="@android:drawable/arrow_down_float"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/quantity_placeholder"
                        android:textColor="?attr/colorOnBackground" />

                    <ImageButton
                        android:id="@+id/increaseAmountBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/colorPrimary"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:srcCompat="@android:drawable/arrow_up_float"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/addBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>